--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "opploans-online",
+  "name": "OppLoans Online Loans | Installment Loans",
   "theme": "syntax",
   "version": "0.2.0",
-  "description": "OppLoans Online Payday Loans Online No Credit Check Instant Approval",
+  "description": "OppLoans.com Online Payday Loans Online No Credit Check Instant Approval",
   "keywords": [
     "opploans",
     "opploans.com"
